feat: 对接coze api报告打字机效果

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <!-- 头部 -->
@@ -103,7 +105,9 @@
                         <label for="preferences">
                             <i class="fas fa-heart"></i> 其他个性化诉求
                         </label>
-                        <textarea id="preferences" name="preferences" placeholder="请告诉我们您的特殊需求，比如：想要带孩子从杭州出发去北京，推荐一些适合孩子的景点和美食，预算充足，推荐一份舒适完整的攻略，结果用中文网页形式呈现，要求必须包含故宫、国家博物馆等景点" rows="4"></textarea>
+                        <textarea id="preferences" name="preferences"
+                            placeholder="请告诉我们您的特殊需求，比如：想要带孩子从杭州出发去北京，推荐一些适合孩子的景点和美食，预算充足，推荐一份舒适完整的攻略，结果用中文网页形式呈现，要求必须包含故宫、国家博物馆等景点"
+                            rows="4"></textarea>
                     </div>
 
                     <button type="submit" class="submit-btn">
@@ -204,6 +208,8 @@
         </section>
     </div>
 
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
-</html> 
+
+</html>
