fix: revised version

--- a/index.html
+++ b/index.html
@@ -167,7 +167,33 @@
                         </div>
                         <div class="step-content">
                             <h3>搜索热门景点</h3>
-                            <p>正在小红书搜索推荐景点和美食...</p>
+                            <p>正在全网搜索推荐景点和美食...</p>
+                        </div>
+                        <div class="step-status">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                    </div>
+
+                    <div class="process-step" id="step-filter">
+                        <div class="step-icon">
+                            <i class="fas fa-filter"></i>
+                        </div>
+                        <div class="step-content">
+                            <h3>筛选相关内容</h3>
+                            <p>正在筛选检索内容...</p>
+                        </div>
+                        <div class="step-status">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                    </div>
+
+                    <div class="process-step" id="step-read">
+                        <div class="step-icon">
+                            <i class="fas fa-book-open"></i>
+                        </div>
+                        <div class="step-content">
+                            <h3>阅读分析内容</h3>
+                            <p>正在阅读检索内容...</p>
                         </div>
                         <div class="step-status">
                             <i class="fas fa-clock"></i>
