--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
             <div class="process-container">
                 <h2><i class="fas fa-brain"></i> AI正在为您规划旅程</h2>
                 <div class="process-steps">
+                    <div class="process-step" id="step-planning">
+                        <div class="step-icon">
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <div class="step-content">
+                            <h3>生成执行计划</h3>
+                            <p>正在生成工具执行计划...</p>
+                        </div>
+                        <div class="step-status">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
+                    </div>
+
                     <div class="process-step" id="step-analyze">
                         <div class="step-icon">
                             <i class="fas fa-search"></i>
@@ -131,7 +144,7 @@
                             <p>正在分析您的出行偏好和需求...</p>
                         </div>
                         <div class="step-status">
-                            <i class="fas fa-spinner fa-spin"></i>
+                            <i class="fas fa-clock"></i>
                         </div>
                     </div>
 
@@ -181,6 +194,19 @@
                         <div class="step-content">
                             <h3>筛选相关内容</h3>
                             <p>正在筛选检索内容...</p>
+                        </div>
+                        <div class="step-status">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                    </div>
+
+                    <div class="process-step" id="step-correlation">
+                        <div class="step-icon">
+                            <i class="fas fa-project-diagram"></i>
+                        </div>
+                        <div class="step-content">
+                            <h3>分析内容相关性</h3>
+                            <p>正在分析检索内容相关性...</p>
                         </div>
                         <div class="step-status">
                             <i class="fas fa-clock"></i>
